# simpleCalc_cmd

./: README.md  pyproject.toml
src/simplecalc_cmd/: simpleCalc_cmd.py
